--- a/VelascoCrhystelProgreso3/MainPage.xaml
+++ b/VelascoCrhystelProgreso3/MainPage.xaml
@@ -2,36 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VelascoCrhystelProgreso3.MainPage"
-             >
+             xmlns:vm="clr-namespace:VelascoCrhystelProgreso3.ViewModels">
+    <ContentPage.BindingContext>
+        <vm:CVAeroPuertoViewModel />
+    </ContentPage.BindingContext>
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
+        <StackLayout Padding="20">
+            <Entry Text="{Binding BuscarAeropuerto}" Placeholder="Ingresa un país" />
+            <Button Text="Buscar" Command="{Binding BuscarAeropuertoCommand}" />
+            <Button Text="Limpiar" Command="{Binding LimpiarAeropuertoCommand}" />
+            <Label Text="{Binding Mensaje}" />
+        </StackLayout>
     </ScrollView>
 
 </ContentPage>
