--- a/VelascoCrhystelProgreso3/Views/MostrarBDView.xaml
+++ b/VelascoCrhystelProgreso3/Views/MostrarBDView.xaml
@@ -3,10 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VelascoCrhystelProgreso3.Views.MostrarBDView"
              Title="CV Mostrar lo que hay en la base de datos">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <!--xmlns:cv="clr-namespace:VelascoCrhystelProgreso3.ViewModels">
+    <ContentPage.BindingContext>
+        <cv:CVAeroPuertoViewModel />
+    </ContentPage.BindingContext>-->
+    <VerticalStackLayout Padding="20">
+        <Button Text="Cargar Información"
+                Command="{Binding CargarInfoBDCommand}"
+                VerticalOptions="Start" />
+        <ListView ItemsSource="{Binding Aeropuertos}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding MiNombre}" Detail="{Binding Pais}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
 </ContentPage>
