--- a/VelascoCrhystelProgreso3/Views/MostrarBDView.xaml
+++ b/VelascoCrhystelProgreso3/Views/MostrarBDView.xaml
@@ -8,49 +8,49 @@
     <ContentPage.BindingContext>
         <cv:CVAeroPuertoViewModel />
     </ContentPage.BindingContext>
-    <VerticalStackLayout Padding="20">
-        <Button Text="Cargar Información"
-                Command="{Binding CargarInfoBDCommand}"
-                WidthRequest="100" 
-                TextColor="White"
-                VerticalOptions="Start" 
-                BackgroundColor="Black"/>
-        <ListView ItemsSource="{Binding Aeropuertos}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Spacing="3">
-                            <StackLayout Orientation="Horizontal" >
-                                <Label Text="{Binding CrhystelVelasco}" FontAttributes="Bold" />
-                            </StackLayout>
-                            <StackLayout Orientation="Horizontal" Spacing="6">
-                                <Label Text="Aeropuerto: " FontAttributes="Bold" />
-                                <Label Text="{Binding NombreAeropuerto}" />
-                                
-                            </StackLayout>
-                            <StackLayout Orientation="Horizontal" Spacing="6">
-                                <Label Text="País: " FontAttributes="Bold" />
-                                <Label Text="{Binding Pais}" />
 
+    <ScrollView>
+        <VerticalStackLayout Padding="20">
+            <Button Text="Cargar Información"
+                    Command="{Binding CargarInfoBDCommand}"
+                    WidthRequest="100" 
+                    TextColor="White"
+                    VerticalOptions="Start" 
+                    BackgroundColor="Black"/>
+
+            <ListView ItemsSource="{Binding Aeropuertos}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Spacing="3">
+                                <StackLayout Orientation="Horizontal" Margin="0,10,0,0"  >
+                                    <Label Text="{Binding CrhystelVelasco}" FontAttributes="Bold" />
+                                </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="6">
+                                    <Label Text="Aeropuerto: " FontAttributes="Bold" />
+                                    <Label Text="{Binding NombreAeropuerto}" />
+                                </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="6">
+                                    <Label Text="País: " FontAttributes="Bold" />
+                                    <Label Text="{Binding Pais}" />
+                                </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="6">
+                                    <Label Text="Longitud: " FontAttributes="Bold" />
+                                    <Label Text="{Binding Longitud}" />
+                                </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="6">
+                                    <Label Text="Latitud: " FontAttributes="Bold" />
+                                    <Label Text="{Binding Latitud}" />
+                                </StackLayout>
+                                <StackLayout Orientation="Horizontal" Spacing="6">
+                                    <Label Text="Email: " FontAttributes="Bold" />
+                                    <Label Text="{Binding Email}" />
+                                </StackLayout>
                             </StackLayout>
-                            <StackLayout Orientation="Horizontal" Spacing="6">
-                                <Label Text="Longitud: " FontAttributes="Bold" />
-                                <Label Text="{Binding Longitud}" />
-                                
-                            </StackLayout>
-                            <StackLayout Orientation="Horizontal" Spacing="6">
-                                <Label Text="Latitud: " FontAttributes="Bold" />
-                                <Label Text="{Binding Latitud}" />
-                                
-                            </StackLayout>
-                            <StackLayout Orientation="Horizontal" Spacing="6">
-                                <Label Text="Email: " FontAttributes="Bold" />
-                                <Label Text="{Binding Email}" />
-                            </StackLayout>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </VerticalStackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
